--- a/rwertman-resume.tex
+++ b/rwertman-resume.tex
@@ -1,8 +1,8 @@
 %-----------------------------------------
-% Michael Wright
+% Robert Wertman
 % Resumé
 %
-% URL: http://github.com/mdwrigh2/resume
+% URL: http://github.com/CasualSuperman/resume
 % This document is covered under the Creative Commons Attribution 3.0 Unported License
 %-----------------------------------------
 
